完成仿QQ拖动清除 tips

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity android:name=".QuadToActivity" />
         <activity android:name=".CubicToActivity" />
-        <activity android:name=".WaveViewActivity"></activity>
+        <activity android:name=".WaveViewActivity" />
+        <activity android:name=".QQDragClearActivity"></activity>
     </application>
 
 </manifest>
